# LLMOps-Architecture

./: README.md  main.py  pyproject.toml
src/app/agents/: orchestrator.py
src/app/api/: main.py
src/app/core/: config.py
src/app/tools/: calculator.py
tests/: test_api.py
