[project]
name = "llmops-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.1",
    "langchain-cohere>=0.5.0",
    "langgraph>=1.0.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
]
